--- a/.github/workflows/build_reverse-proxy.yml
+++ b/.github/workflows/build_reverse-proxy.yml
@@ -6,7 +6,7 @@ on:
       - master
     paths:
       - reverse-proxy/**
-      - .github/workflows/build_reverse-proxy.yaml
+      - .github/workflows/build_reverse-proxy.yml
   workflow_dispatch:
 
 jobs:
