Adjust package url

--- a/.github/workflows/build_reverse-proxy.yml
+++ b/.github/workflows/build_reverse-proxy.yml
@@ -30,6 +30,6 @@ jobs:
           file: reverse-proxy/dockerfile
           push: true
           tags: |
-            ghcr.io/calfur/reverse-proxy:${{ github.sha }}
-            ghcr.io/calfur/reverse-proxy:latest
+            ghcr.io/calfur/calfur-dev/reverse-proxy:${{ github.sha }}
+            ghcr.io/calfur/calfur-dev/reverse-proxy:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
