--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 services:
   reverse-proxy:
-    image: ghcr.io/calfur/reverse-proxy:latest
+    image: ghcr.io/calfur/calfur-dev/reverse-proxy:latest
+    container_name: reverse-proxy
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     ports:
@@ -11,7 +11,7 @@ services:
       - webnet
     depends_on:
       - certbot
-      - certbot_init
+      - certbot-init
 
   certbot:
     image: certbot/certbot
@@ -21,17 +21,14 @@ services:
       - ./certbot/www:/var/www/certbot
     entrypoint: /bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --post-hook "nginx -s reload"; sleep 12h; done'
 
-  certbot_init:
+  certbot-init:
     image: certbot/certbot
-    container_name: certbot_init
-    depends_on:
-      - nginx
+    container_name: certbot-init
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     entrypoint: /bin/sh -c 'if [ ! -f /etc/letsencrypt/live/calfur.dev/fullchain.pem ]; then certbot certonly --webroot -w /var/www/certbot --email robin.nater@hotmail.com --agree-tos --no-eff-email -d calfur.dev -d *.calfur.dev; fi'
 
 networks:
-  default:
-    external:
-      name: webnet
+  webnet:
+    external: true
