--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,31 +3,34 @@ services:
     image: ghcr.io/calfur/calfur-dev/reverse-proxy:latest
     container_name: reverse-proxy
     volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/ssl/:ro
+      - ./certbot/www:/var/www/certbot/:ro
     ports:
       - "443:443"
+      - "80:80"
+    restart: always
     networks:
       - webnet
-    depends_on:
-      - certbot
-      - certbot-init
 
   certbot:
-    image: certbot/certbot
+    image: certbot/certbot:latest
     container_name: certbot
     volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: /bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --post-hook "nginx -s reload"; sleep 12h; done'
+      - ./certbot/conf:/etc/ssl/:rw
+      - ./certbot/www:/var/www/certbot/:rw
+    entrypoint: /bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot --post-hook "docker exec reverse-proxy nginx -s reload"; sleep 12h; done'
+    depends_on:
+      - reverse-proxy
 
   certbot-init:
-    image: certbot/certbot
+    image: certbot/certbot:latest
     container_name: certbot-init
     volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: /bin/sh -c 'if [ ! -f /etc/letsencrypt/live/calfur.dev/fullchain.pem ]; then certbot certonly --webroot -w /var/www/certbot --email robin.nater@hotmail.com --agree-tos --no-eff-email -d calfur.dev -d *.calfur.dev; fi'
+      - ./certbot/conf:/etc/ssl/:rw
+      - ./certbot/www:/var/www/certbot/:rw
+    entrypoint: /bin/sh -c 'if [ ! -f /etc/ssl/live/calfur.dev/fullchain.pem ]; then certbot certonly --webroot --webroot-path /var/www/certbot/ -d calfur.dev -d *.calfur.dev --post-hook "docker exec reverse-proxy nginx -s reload"; fi'
+    depends_on:
+      - reverse-proxy
 
 networks:
   webnet:
