--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -23,12 +23,27 @@ http {
   error_log /var/log/nginx/error.log;
 
   # SSL
-  ssl_certificate /etc/letsencrypt/live/calfur.dev/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/calfur.dev/privkey.pem;
+  ssl_certificate /etc/ssl/live/calfur.dev/fullchain.pem;
+  ssl_certificate_key /etc/ssl/live/calfur.dev/privkey.pem;
 
   # Resolver settings (using Docker's default DNS resolver)
   resolver 127.0.0.11 valid=30s;
 
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name calfur.dev www.calfur.dev pannenstreifen.calfur.dev q-swiper.calfur.dev balloon-race.calfur.dev;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
+
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
   server {
     listen 443 ssl;
     server_name pannenstreifen.calfur.dev;
@@ -47,7 +62,6 @@ http {
       root /usr/share/nginx/html;
       internal;
     }
-
   }
   server {
     listen 443 ssl;
