--- a/kubernetes/02-traefik-deployment.yml
+++ b/kubernetes/02-traefik-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reverse-proxy
+
 spec:
   replicas: 1
   selector:
@@ -12,6 +13,7 @@ spec:
       labels:
         app: reverse-proxy
     spec:
+      serviceAccountName: traefik-account
       containers:
       - name: reverse-proxy
         image: traefik:v3.0
