Fix typo in kubeclt

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,4 @@ jobs:
         kubectl apply -f kubernetes/02-traefik-service.yml
         kubectl apply -f kubernetes/03-pannenstreifen-website-deployment.yml
         kubectl apply -f kubernetes/03-pannenstreifen-website-ingress.yml
-        kubeclt apply -f kubernetes/03-pannenstreifen-website-service.yml
+        kubectl apply -f kubernetes/03-pannenstreifen-website-service.yml
