--- a/kubernetes/02-traefik-deployment.yml
+++ b/kubernetes/02-traefik-deployment.yml
@@ -2,39 +2,41 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reverse-proxy
+  labels:
+    app: traefik
 
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: reverse-proxy
+      app: traefik
   template:
     metadata:
       labels:
-        app: reverse-proxy
+        app: traefik
     spec:
       serviceAccountName: traefik-account
       containers:
-      - name: reverse-proxy
-        image: traefik:v3.0
-        args:
-          - "--providers.kubernetescrd"
-          - "--entrypoints.web.address=:80"
-          - "--entrypoints.websecure.address=:443"
-          - "--certificatesresolvers.defaultresolver.acme.httpchallenge=true"
-          - "--certificatesresolvers.defaultresolver.acme.httpchallenge.entrypoint=web"
-          - "--certificatesresolvers.defaultresolver.acme.email=robin.nater@hotmail.com"
-          - "--certificatesresolvers.defaultresolver.acme.storage=/letsencrypt/acme.json"
-        ports:
-          - name: web
-            containerPort: 80
-          - name: websecure
-            containerPort: 443
-        volumeMounts:
-          - name: docker-sock
-            mountPath: /var/run/docker.sock
-          - name: letsencrypt
-            mountPath: /letsencrypt
+        - name: traefik
+          image: traefik:v3.0
+          args:
+            - "--providers.kubernetescrd"
+            - "--entrypoints.web.address=:80"
+            - "--entrypoints.websecure.address=:443"
+            - "--certificatesresolvers.defaultresolver.acme.httpchallenge=true"
+            - "--certificatesresolvers.defaultresolver.acme.httpchallenge.entrypoint=web"
+            - "--certificatesresolvers.defaultresolver.acme.email=robin.nater@hotmail.com"
+            - "--certificatesresolvers.defaultresolver.acme.storage=/letsencrypt/acme.json"
+          ports:
+            - name: web
+              containerPort: 80
+            - name: websecure
+              containerPort: 443
+          volumeMounts:
+            - name: docker-sock
+              mountPath: /var/run/docker.sock
+            - name: letsencrypt
+              mountPath: /letsencrypt
       volumes:
         - name: docker-sock
           hostPath:
