--- a/kubernetes/03-pannenstreifen-website-deployment.yml
+++ b/kubernetes/03-pannenstreifen-website-deployment.yml
@@ -13,7 +13,8 @@ spec:
         app: pannenstreifen-website
     spec:
       containers:
-      - name: pannenstreifen-website
-        image: ghcr.io/calfur/pannenstreifen-website:85a700a09f1ef8e849bfd6b1b54f17893538171c
-        ports:
-          - containerPort: 80
+        - name: pannenstreifen-website
+          image: ghcr.io/calfur/pannenstreifen-website:85a700a09f1ef8e849bfd6b1b54f17893538171c
+          ports:
+            - name: web
+              containerPort: 80
