--- a/kubernetes/04-pannenstreifen-website-ingress.yml
+++ b/kubernetes/04-pannenstreifen-website-ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: pannenstreifen-website
+  name: pannenstreifen-website-ingress
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls.certresolver: defaultresolver
@@ -16,7 +16,7 @@ spec:
           service:
             name: pannenstreifen-website
             port:
-              number: 80
+              name: web
   tls:
   - hosts:
     - pannenstreifen.calfur.dev
