Update traefik-role, add more access rights

--- a/kubernetes/00-role.yml
+++ b/kubernetes/00-role.yml
@@ -31,3 +31,11 @@ rules:
       - ingresses/status
     verbs:
       - update
+  - apiGroups:
+      - traefik.io
+    resources:
+      - serverstransporttcps
+    verbs:
+      - get
+      - list
+      - watch
