Add even more access rights

--- a/kubernetes/00-role.yml
+++ b/kubernetes/00-role.yml
@@ -35,6 +35,15 @@ rules:
       - traefik.io
     resources:
       - serverstransporttcps
+      - serverstransports
+      - middlewaretcps
+      - ingressroutetcps
+      - tlsstores
+      - traefikservices
+      - ingressrouteudps
+      - tlsoptions
+      - middlewares
+      - ingressroutes
     verbs:
       - get
       - list
