Add traefik endpoint on port 8080

--- a/kubernetes/02-traefik-deployment.yml
+++ b/kubernetes/02-traefik-deployment.yml
@@ -23,6 +23,8 @@ spec:
             - "--providers.kubernetescrd"
             - "--entrypoints.web.address=:80"
             - "--entrypoints.websecure.address=:443"
+            - "--entrypoints.traefik.address=:8080"
+            - "--api.dashboard=true"
             - "--certificatesresolvers.defaultresolver.acme.httpchallenge=true"
             - "--certificatesresolvers.defaultresolver.acme.httpchallenge.entrypoint=web"
             - "--certificatesresolvers.defaultresolver.acme.email=robin.nater@hotmail.com"
@@ -32,6 +34,8 @@ spec:
               containerPort: 80
             - name: websecure
               containerPort: 443
+            - name: traefik
+              containerPort: 8080
           volumeMounts:
             - name: docker-sock
               mountPath: /var/run/docker.sock
