--- a/kubernetes/02-traefik-service.yml
+++ b/kubernetes/02-traefik-service.yml
@@ -7,5 +7,9 @@ spec:
   selector:
     app: traefik
   ports:
-    - targetPort: websecure
-      port: 443
+    - protocol: TCP
+      name: web
+      port: 8000
+    - protocol: TCP
+      name: websecure
+      port: 4443
