--- a/kubernetes/03-pannenstreifen-website-service.yml
+++ b/kubernetes/03-pannenstreifen-website-service.yml
@@ -7,6 +7,6 @@ spec:
   selector:
     app: pannenstreifen-website
   ports:
-    - name: web
+    - protocol: TCP
+      name: web
       port: 80
-      targetPort: web
