--- a/kubernetes/04-pannenstreifen-website-ingress.yml
+++ b/kubernetes/04-pannenstreifen-website-ingress.yml
@@ -1,22 +1,16 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
-  name: pannenstreifen-website-ingress
-  annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.tls.certresolver: defaultresolver
+  name: ingressroutetls
+  namespace: default
 spec:
-  rules:
-  - host: pannenstreifen.calfur.dev
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: pannenstreifen-website
-            port:
-              name: web
+  entryPoints:
+    - websecure
+  routes:
+  - match: Host(`pannenstreifen.calfur.dev`)
+    kind: Rule
+    services:
+    - name: pannenstreifen-website
+      port: 80
   tls:
-  - hosts:
-    - pannenstreifen.calfur.dev
+    certResolver: defaultresolver
