--- a/kubernetes/02-traefik-deployment.yml
+++ b/kubernetes/02-traefik-deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: reverse-proxy
+  name: traefik
   labels:
     app: traefik
 
@@ -25,24 +25,11 @@ spec:
             - --entryPoints.web.Address=:8000
             - --entryPoints.websecure.Address=:4443
             - --providers.kubernetescrd
-            - "--certificatesresolvers.defaultresolver.acme.httpchallenge=true"
-            - "--certificatesresolvers.defaultresolver.acme.httpchallenge.entrypoint=web"
-            - "--certificatesresolvers.defaultresolver.acme.email=robin.nater@hotmail.com"
-            - "--certificatesresolvers.defaultresolver.acme.storage=/letsencrypt/acme.json"
+            - --certificatesresolvers.myresolver.acme.tlschallenge
+            - --certificatesresolvers.myresolver.acme.email=robin.nater@hotmail.com
+            - --certificatesresolvers.myresolver.acme.storage=acme.json
           ports:
             - name: web
               containerPort: 8000
             - name: websecure
               containerPort: 4443
-          volumeMounts:
-            - name: docker-sock
-              mountPath: /var/run/docker.sock
-            - name: letsencrypt
-              mountPath: /letsencrypt
-      volumes:
-        - name: docker-sock
-          hostPath:
-            path: /var/run/docker.sock
-        - name: letsencrypt
-          hostPath:
-            path: /letsencrypt
