--- a/kubernetes/02-traefik-service.yml
+++ b/kubernetes/02-traefik-service.yml
@@ -1,11 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: reverse-proxy
+  name: traefik
+
 spec:
-  type: LoadBalancer
-  selector:
-    app: traefik
   ports:
     - protocol: TCP
       name: web
@@ -13,3 +11,5 @@ spec:
     - protocol: TCP
       name: websecure
       port: 4443
+  selector:
+    app: traefik
