--- a/kubernetes/k3s.yml
+++ b/kubernetes/k3s.yml
@@ -1,23 +1,24 @@
-server:
-  image: rancher/k3s:v1.17.2-k3s1
-  command: server --disable-agent --no-deploy traefik
-  environment:
-    - K3S_CLUSTER_SECRET=wernds4kjopfHHemkIDPOnwlLOpiksn
-    - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
-    - K3S_KUBECONFIG_MODE=666
-  volumes:
-    - /opt/k3s-configs/out:/output
-    - /opt/k3s-configs/in:/var/lib/rancher/k3s/server/manifests
-  ports:
-    - 6443:6443
+services:
+  server:
+    image: rancher/k3s:v1.17.2-k3s1
+    command: server --disable-agent --no-deploy traefik
+    environment:
+      - K3S_CLUSTER_SECRET=wernds4kjopfHHemkIDPOnwlLOpiksn
+      - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
+      - K3S_KUBECONFIG_MODE=666
+    volumes:
+      - /opt/k3s-configs/out:/output
+      - /opt/k3s-configs/in:/var/lib/rancher/k3s/server/manifests
+    ports:
+      - 6443:6443
 
-node:
-  image: rancher/k3s:v1.17.2-k3s1
-  privileged: true
-  links:
-    - server
-  environment:
-    - K3S_URL=https://server:6443
-    - K3S_CLUSTER_SECRET=wernds4kjopfHHemkIDPOnwlLOpiksn
-  volumes:
-    - /opt/k3s-configs/custom-image:/var/lib/rancher/k3s/agent/images
+  node:
+    image: rancher/k3s:v1.17.2-k3s1
+    privileged: true
+    links:
+      - server
+    environment:
+      - K3S_URL=https://server:6443
+      - K3S_CLUSTER_SECRET=wernds4kjopfHHemkIDPOnwlLOpiksn
+    volumes:
+      - /opt/k3s-configs/custom-image:/var/lib/rancher/k3s/agent/images
