--- a/kubernetes/02-traefik-deployment.yml
+++ b/kubernetes/02-traefik-deployment.yml
@@ -33,3 +33,5 @@ spec:
               containerPort: 8000
             - name: websecure
               containerPort: 4443
+            - name: admin
+              containerPort: 8080
