--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,13 +32,16 @@ jobs:
         script: |
           set -e
           docker-compose -f /opt/GitHubAction/kubernetes/k3s.yml up -d
-          ls
-          docker exec k3s_server kubectl apply -f /kubernetes-configs/00-account.yml
-          docker exec k3s_server kubectl apply -f /kubernetes-configs/00-role.yml
-          docker exec k3s_server kubectl apply -f /kubernetes-configs/01-role-binding.yml
-          docker exec k3s_server kubectl apply -f /kubernetes-configs/02-traefik-deployment.yml
+          echo "Waiting for Kubernetes API server to be ready..."
+          while ! docker exec k3s_server kubectl get nodes; do
+            sleep 2
+          done
+          echo "Kubernetes API server is ready."
+          docker exec k3s_server kubectl apply -f https://raw.githubusercontent.com/traefik/traefik/v3.0/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
+          docker exec k3s_server kubectl apply -f https://raw.githubusercontent.com/traefik/traefik/v3.0/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
           docker exec k3s_server kubectl apply -f /kubernetes-configs/02-traefik-service.yml
-          docker exec k3s_server kubectl apply -f /kubernetes-configs/03-pannenstreifen-website-deployment.yml
+          docker exec k3s_server kubectl apply -f /kubernetes-configs/02-traefik-deployment.yml
           docker exec k3s_server kubectl apply -f /kubernetes-configs/03-pannenstreifen-website-service.yml
+          docker exec k3s_server kubectl apply -f /kubernetes-configs/03-pannenstreifen-website-deployment.yml
           docker exec k3s_server kubectl apply -f /kubernetes-configs/04-pannenstreifen-website-ingress.yml
           rm -rf /opt/GitHubAction/
