--- a/kubernetes/02-traefik-deployment.yml
+++ b/kubernetes/02-traefik-deployment.yml
@@ -15,7 +15,7 @@ spec:
       labels:
         app: traefik
     spec:
-      serviceAccountName: traefik-account
+      serviceAccountName: traefik-ingress-controller
       containers:
         - name: traefik
           image: traefik:v3.0
