Switch from secret to volume

--- a/kubernetes/003-traefik-deployment.yml
+++ b/kubernetes/003-traefik-deployment.yml
@@ -27,15 +27,14 @@ spec:
             - --providers.kubernetescrd
             - --certificatesresolvers.myresolver.acme.tlschallenge
             - --certificatesresolvers.myresolver.acme.email=robin.nater@hotmail.com
-            - --certificatesresolvers.myresolver.acme.storage=/certs/acme.json
+            - --certificatesresolvers.myresolver.acme.storage=/data/acme.json
           ports:
             - name: websecure
               containerPort: 4443
           volumeMounts:
-            - name: traefik-certificates
-              mountPath: /certs
-              subPath: acme.json
+            - name: traefik-storage
+              mountPath: /data
       volumes:
-        - name: traefik-certificates
-          secret:
-            secretName: traefik-certificates
+        - name: traefik-storage
+          persistentVolumeClaim:
+            claimName: traefik-pvc
