--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,13 @@ jobs:
         script: |
           set -e
           kubectl apply -k /opt/GitHubAction/kubernetes/traefik
+          # Disabled until 19.06 when the letsencrypt cooldown is over
           # kubectl apply -k /opt/GitHubAction/kubernetes/pannenstreifen-website
+          kubectl create secret docker-registry ghcr-secret-q-swiper \
+            --docker-server=ghcr.io \
+            --docker-username=${{ github.actor }} \
+            --docker-password=${{ secrets.GH_PAT_PACKAGES_READ }} \
+            --docker-email=robin.nater@hotmail.com \
+            --dry-run=client -o yaml | kubectl apply -f -
           kubectl apply -k /opt/GitHubAction/kubernetes/q-swiper
           rm -rf /opt/GitHubAction/
