--- a/kubernetes/q-swiper/02-deployment.yml
+++ b/kubernetes/q-swiper/02-deployment.yml
@@ -7,7 +7,7 @@ metadata:
     app: q-swiper
 
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: q-swiper
@@ -18,7 +18,9 @@ spec:
     spec:
       containers:
         - name: q-swiper
-          image: ghcr.io/calfur/pannenstreifen-website:85a700a09f1ef8e849bfd6b1b54f17893538171c
+          image: ghcr.io/q-swiper/map-generator:c5c255fc60d071133fcbcf904ccb907d37a82005
           ports:
             - name: web
               containerPort: 80
+      imagePullSecrets:
+        - name: ghcr-secret-q-swiper
