--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,7 @@ jobs:
         script: |
           set -e
           kubectl apply -k /opt/GitHubAction/kubernetes/traefik
-          # Disabled until 19.06 when the letsencrypt cooldown is over
-          # kubectl apply -k /opt/GitHubAction/kubernetes/pannenstreifen-website
+          kubectl apply -k /opt/GitHubAction/kubernetes/pannenstreifen-website
           kubectl create secret docker-registry ghcr-secret-q-swiper \
             --docker-server=ghcr.io \
             --docker-username=${{ github.actor }} \
