--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,13 +33,23 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           set -e
-          kubectl apply -k /opt/GitHubAction/kubernetes/traefik
-          kubectl apply -k /opt/GitHubAction/kubernetes/pannenstreifen
+
+          echo "::group::Creating Docker registry secret"
           kubectl create secret docker-registry ghcr-secret-q-swiper \
             --docker-server=ghcr.io \
-            --docker-username=${{ github.actor }} \
-            --docker-password=${{ secrets.GH_PAT_PACKAGES_READ }} \
+            --docker-username=${GITHUB_ACTOR} \
+            --docker-password=${GH_PAT_PACKAGES_READ} \
             --docker-email=robin.nater@hotmail.com \
             --dry-run=client -o yaml | kubectl apply -f -
+          echo "::endgroup::"
+
+          echo "::group::Applying Kubernetes manifests"
+          kubectl apply -k /opt/GitHubAction/kubernetes/traefik
+          kubectl apply -k /opt/GitHubAction/kubernetes/pannenstreifen
           kubectl apply -k /opt/GitHubAction/kubernetes/q-swiper
+          kubectl apply -k /opt/GitHubAction/kubernetes/balloon
+          echo "::endgroup::"
+
+          echo "::group::Cleaning up"
           rm -rf /opt/GitHubAction/
+          echo "::endgroup::"
