Fix subdomain name

--- a/kubernetes/balloon-race/03-ingress.yml
+++ b/kubernetes/balloon-race/03-ingress.yml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-  - match: Host(`balloon.calfur.dev`)
+  - match: Host(`balloon-race.calfur.dev`)
     kind: Rule
     services:
     - name: balloon-race
