--- a/kubernetes/killer/kustomization.yaml
+++ b/kubernetes/killer/kustomization.yaml
@@ -1,4 +1,6 @@
 resources:
-  - 01-service.yml
-  - 02-deployment.yml
+  - backend/01-service.yml
+  - backend/02-deployment.yml
+  - frontend/01-service.yml
+  - frontend/02-deployment.yml
   - 03-ingress.yml
