--- a/kubernetes/killer/03-ingress.yml
+++ b/kubernetes/killer/03-ingress.yml
@@ -3,14 +3,20 @@ kind: IngressRoute
 metadata:
   namespace: default
   name: ingressroutetls
+
 spec:
   entryPoints:
     - websecure
   routes:
-  - match: Host(`killer.jubla-nz.ch`)
-    kind: Rule
-    services:
-    - name: killer
-      port: 80
+    - match: Host(`killer.jubla-nz.ch`)
+      kind: Rule
+      services:
+        - name: killer-frontend
+          port: 80
+    - match: Host(`api.killer.jubla-nz.ch`)
+      kind: Rule
+      services:
+        - name: killer-backend
+          port: 5000
   tls:
     certResolver: myresolver
