--- a/kubernetes/killer/frontend/01-service.yml
+++ b/kubernetes/killer/frontend/01-service.yml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: default
-  name: killer
+  name: killer-frontend
 
 spec:
   ports:
     - protocol: TCP
       name: web
       port: 80
+      targetPort: 80
   selector:
-    app: killer
+    app: killer-frontend
