--- a/.github/workflows/update-image-template.yml
+++ b/.github/workflows/update-image-template.yml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Push new branch
         run: |
-          git push origin update-${{ inputs.image_name }}-${{ inputs.image_version }}
-
+          git push --set-upstream origin update-${{ inputs.image_name }}-${{ inputs.image_version }}
+  
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
