--- a/.github/workflows/update-image-template.yml
+++ b/.github/workflows/update-image-template.yml
@@ -53,16 +53,16 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const pullRequests = await github.pulls.list({
+            const pullRequests = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: 'open',
               head: `${context.repo.owner}:update-${{ inputs.image_name }}-${{ inputs.image_version }}`
             });
-
+      
             if (pullRequests.data.length > 0) {
               const pr = pullRequests.data[0];
-              await github.pulls.merge({
+              await github.rest.pulls.merge({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: pr.number
