--- a/.github/workflows/update-image-template.yml
+++ b/.github/workflows/update-image-template.yml
@@ -12,6 +12,9 @@ on:
       file_path:
         required: true
         type: string
+      trigger_deploy:
+        required: true
+        type: boolean
 
 jobs:
   update-image:
@@ -30,39 +33,9 @@ jobs:
           default_author: github_actions
           message: "Update image version of ${{ inputs.image_name }} to ${{ inputs.image_version }}"
           add: ${{ inputs.file_path }}
-          new_branch: update-${{ inputs.image_name }}-${{ inputs.image_version }}
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          branch: update-${{ inputs.image_name }}-${{ inputs.image_version }}
-          title: "Update image version of ${{ inputs.image_name }} to ${{ inputs.image_version }}"
-          body: "This PR updates the image version of ${{ inputs.image_name }} to ${{ inputs.image_version }}."
-          base: master
-          draft: false
-
-      - name: Merge the PR
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const pullRequests = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              head: `${context.repo.owner}:update-${{ inputs.image_name }}-${{ inputs.image_version }}`
-            });
-      
-            if (pullRequests.data.length > 0) {
-              const pr = pullRequests.data[0];
-              await github.rest.pulls.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: pr.number
-              });
-            }
 
       - name: Trigger deployment pipeline
+        if: ${{ inputs.trigger_deploy == true }}
         uses: peter-evans/repository-dispatch@v3
         with:
           event-type: deploy
