--- a/.github/workflows/update-q-swiper-image.yml
+++ b/.github/workflows/update-q-swiper-image.yml
@@ -11,3 +11,4 @@ jobs:
       image_version: ${{ github.event.client_payload.image_version }}
       image_name: ghcr.io/q-swiper/map-generator
       file_path: ./kubernetes/q-swiper/02-deployment.yml
+      trigger_deploy: true
