--- a/.github/workflows/update-image-template.yml
+++ b/.github/workflows/update-image-template.yml
@@ -33,7 +33,7 @@ jobs:
           default_author: github_actions
           message: "Update image version of ${{ inputs.image_name }} to ${{ inputs.image_version }}"
           add: ${{ inputs.file_path }}
-          pull: '--rebase'
+          pull: '--rebase --autostash'
 
       - name: Trigger deployment pipeline
         if: ${{ inputs.trigger_deploy == true }}
