--- a/kubernetes/killer/01-service.yml
+++ b/kubernetes/killer/01-service.yml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: default
-  name: killer-frontend
+  name: killer
 
 spec:
   ports:
     - protocol: TCP
       name: web
       port: 80
-      targetPort: 80
+      targetPort: 5000
   selector:
-    app: killer-frontend
+    app: killer
