--- a/kubernetes/balloon-race/03-ingress.yml
+++ b/kubernetes/balloon-race/03-ingress.yml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   namespace: default
-  name: ingressroutetls
+  name: ingressroute-balloon-race
 spec:
   entryPoints:
     - websecure
